// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyValueList component > should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        role="list"
      >
        <div
          class="mocked-styled-1 el-key-value-list-wrap"
          role="listitem"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Name
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              John Doe
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-1 el-key-value-list-wrap"
          role="listitem"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Email
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              email@example.com
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-1 el-key-value-list-wrap"
          role="listitem"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Parking Spaces
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              2
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-1 el-key-value-list-wrap"
          role="listitem"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Date Signed Up
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              20th September 2023
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-1 el-key-value-list-wrap"
          role="listitem"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text el-text-ellipsis"
            >
              Address
            </div>
            <div
              class="el-text-base el-text-sm el-text-ellipsis"
            >
              I added a textEllipsis prop to this one to show how it works. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-1 el-key-value-list-wrap"
          role="listitem"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Description
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              This one I just allowed the text to wrap. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      role="list"
    >
      <div
        class="mocked-styled-1 el-key-value-list-wrap"
        role="listitem"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          <span
            class="el-intent-primary el-icon"
          />
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Name
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            John Doe
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-1 el-key-value-list-wrap"
        role="listitem"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          <span
            class="el-intent-primary el-icon"
          />
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Email
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            email@example.com
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-1 el-key-value-list-wrap"
        role="listitem"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          <span
            class="el-intent-primary el-icon"
          />
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Parking Spaces
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            2
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-1 el-key-value-list-wrap"
        role="listitem"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          <span
            class="el-intent-primary el-icon"
          />
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Date Signed Up
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            20th September 2023
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-1 el-key-value-list-wrap"
        role="listitem"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          <span
            class="el-intent-primary el-icon"
          />
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text el-text-ellipsis"
          >
            Address
          </div>
          <div
            class="el-text-base el-text-sm el-text-ellipsis"
          >
            I added a textEllipsis prop to this one to show how it works. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-1 el-key-value-list-wrap"
        role="listitem"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          <span
            class="el-intent-primary el-icon"
          />
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Description
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            This one I just allowed the text to wrap. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`KeyValueList component > should match a snapshot for a grid 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-3 el-grid"
      >
        <div
          class="mocked-styled-5 el-col-half"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="mocked-styled-0 el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon"
              />
            </div>
            <div
              class="el-flex-container el-flex-column"
            >
              <div
                class="el-text-base el-text-xs el-has-grey-text"
              >
                Name
              </div>
              <div
                class="el-text-base el-text-sm"
              >
                John Doe
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-5 el-col-half"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="mocked-styled-0 el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon"
              />
            </div>
            <div
              class="el-flex-container el-flex-column"
            >
              <div
                class="el-text-base el-text-xs el-has-grey-text"
              >
                Email
              </div>
              <div
                class="el-text-base el-text-sm"
              >
                email@example.com
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-5 el-col-half"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="mocked-styled-0 el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon"
              />
            </div>
            <div
              class="el-flex-container el-flex-column"
            >
              <div
                class="el-text-base el-text-xs el-has-grey-text"
              >
                Parking Spaces
              </div>
              <div
                class="el-text-base el-text-sm"
              >
                2
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-5 el-col-half"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="mocked-styled-0 el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon"
              />
            </div>
            <div
              class="el-flex-container el-flex-column"
            >
              <div
                class="el-text-base el-text-xs el-has-grey-text"
              >
                Date Signed Up
              </div>
              <div
                class="el-text-base el-text-sm"
              >
                20th September 2023
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-4 el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="mocked-styled-0 el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon"
              />
            </div>
            <div
              class="el-flex-container el-flex-column"
            >
              <div
                class="el-text-base el-text-xs el-has-grey-text el-text-ellipsis"
              >
                Address
              </div>
              <div
                class="el-text-base el-text-sm el-text-ellipsis"
              >
                I added a textEllipsis prop to this one to show how it works. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
              </div>
            </div>
          </div>
        </div>
        <div
          class="mocked-styled-4 el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="mocked-styled-0 el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon"
              />
            </div>
            <div
              class="el-flex-container el-flex-column"
            >
              <div
                class="el-text-base el-text-xs el-has-grey-text"
              >
                Description
              </div>
              <div
                class="el-text-base el-text-sm"
              >
                This one I just allowed the text to wrap. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-3 el-grid"
    >
      <div
        class="mocked-styled-5 el-col-half"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Name
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              John Doe
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-5 el-col-half"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Email
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              email@example.com
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-5 el-col-half"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Parking Spaces
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              2
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-5 el-col-half"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Date Signed Up
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              20th September 2023
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-4 el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text el-text-ellipsis"
            >
              Address
            </div>
            <div
              class="el-text-base el-text-sm el-text-ellipsis"
            >
              I added a textEllipsis prop to this one to show how it works. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
            </div>
          </div>
        </div>
      </div>
      <div
        class="mocked-styled-4 el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="mocked-styled-0 el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon"
            />
          </div>
          <div
            class="el-flex-container el-flex-column"
          >
            <div
              class="el-text-base el-text-xs el-has-grey-text"
            >
              Description
            </div>
            <div
              class="el-text-base el-text-sm"
            >
              This one I just allowed the text to wrap. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
